# first-order-pipeline

./: Dockerfile  README.md  SECRETS_SETUP.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  pipeline-trigger.yml  tests.yml
src/: extract.py  load.py
tests/: test_main.py  test_pipelines.py  test_transform.py
